Mon Feb  2 17:02:29 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

Thu Feb  5 23:48:34 1998  Theodore Y. Ts'o  <tytso@mit.edu>

	* rd_cred.c (krb5_rd_cred): 
	* rd_safe.c (krb5_rd_safe): 
	* rd_priv.c (krb5_rd_priv): Use the remote_subkey first, since the
		mk_* routines try to use their local_subkey first.
		Otherwise, the wrong keys will get used if subkeys are
		used in both directions.

Fri Jan  2 21:21:29 1998  Tom Yu  <tlyu@mit.edu>

	* preauth.c (handle_sam_labels):
	(obtain_sam_padata): Check return of malloc. [krb5-libs/518]

	* chpw.c (krb5_mk_chpw_req): Check return of malloc.
	(krb5_rd_chpw_rep): Check return of malloc. [krb5-libs/518]

Tue Dec 16 00:08:33 1997  Tom Yu  <tlyu@mit.edu>

	* mk_req_ext.c (krb5_mk_req_extended): Check enctype of session
	key, not that of the ticket, which we really shouldn't care about.

Sun Dec  7 07:24:23 1997  Ezra Peisach  <epeisach@dumpster.rose.brandeis.edu>

	* gic_pwd.c (krb5_get_init_creds_password): Change fourth argument
 	in call to prompter (which is an int) from NULL to 0.

Sat Dec  6 02:28:17 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Add files chpw.c, gic_*, preauth2.c, vfy_increds.c,
	vic_opt.c.

	* chpw.c: New file; implement Cygnus chpw.

	* get_in_tkt.c: Implement support for Cygnus initial credentials
	API.

	* gic_keytab.c: New file; Cygnus initial creds.

	* gic_opt.c: New file; Cygnus initial creds.

	* gic_pwd.c: New file; Cygnus initial creds.

	* preauth.c: Add more SAM support (from Cygnus).

	* preauth2.c: New file; additional SAM support from Cygnus.

	* send_tgs.c: Account for additional parameter to sendto_kdc.

	* vfy_increds.c: New file; Cygnus initial creds.

	* vic_opt.c: New file; Cygnus initial creds.

Wed Oct 22 00:29:33 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* send_tgs.c (krb5_send_tgs): Don't send a zero endtime; if the
		requested endtime is zero, set it equal to the TGT endtime.
